fixed error of putting values at cost center

--- a/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Server/Pages/Manager/AllocateCostCenters.razor
+++ b/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Server/Pages/Manager/AllocateCostCenters.razor
@@ -229,8 +229,7 @@ else
         CloseAllocationValuePopup(); // Close popup first
 
         // Navigate with the new value in the route
-        NavigationManager.NavigateTo($"/manager/edit-cost-center/{costCenterIdToNavigate}/{valueToPass}");
-
+        NavigationManager.NavigateTo($"/manager/edit-cost-center/{costCenterIdToNavigate}?allocatedValue={valueToPass}");
         // We are no longer calling any service methods here.
     }
 
