--- a/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Pages/_Layout.cshtml
+++ b/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Pages/_Layout.cshtml
@@ -39,6 +39,6 @@
         </div>
 
         <script src="_framework/blazor.server.js"></script>
-    }
+        <script src="js/fileUtils.js"></script> }
 </body>
 </html>
