Update project colors

--- a/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Server/Shared/Header.razor
+++ b/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Server/Shared/Header.razor
@@ -9,8 +9,7 @@
 <div class="header-container">
     <div class="header-left">
         @* This is the banner image you uploaded *@
-        <img src="/images/banner.png" alt="Company Banner" class="company-logo" />
-        <nav class="header-nav-menu">
+        <img src="/images/logo.svg" alt="Company Banner" class="company-logo" />        <nav class="header-nav-menu">
             @* These are the links from your old NavMenu *@
             <AuthorizeView Roles="Director, Master">
                 <NavLink class="nav-link" href="/director/dashboard" Match="NavLinkMatch.All">
